--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,15 @@
-# mariadb ?? ?? ??
+# mariadb info
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/test
 
 spring.datasource.username=test
 spring.datasource.password=test12#$
 
-#mybatis model ?? ?? ??
+#mybatis model path
 mybatis.type-aliases-package=com.univ.VoteProject.Model
 
-#mybatis xml ?? ?? ??
+#mybatis xml mapper path
 mybatis.mapper-locations=classpath:mapper/*.xml
-#mybatis.mapper-locations=classpath:com/univ/VoteProject/mybatis/*.xml
 
-// ?? ???? ???? ? ?? ?? ??
+# file path
 file.upload-dir=/Users/pms327/Downloads/file
